Add GuaranteedPinningExample class and JFR analysis documentation; remove obsolete PinningExample class